# Bug-Tracker

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  app.py  bugtracker.db  config.py  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  test.db
.github/workflows/: ci.yml  deploy.yml
bug_tracker_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/: __main__.py  client.py  config.py  formatters.py  main.py  payloads.py  services.py
core/: db.py  enums.py  logging.py  models.py  schemas.py  validation.py
core/automation/: __init__.py  assignee_suggestion.py  interfaces.py  stats_provider.py  tag_generator.py
core/repos/: duplicate_checker.py  exceptions.py  issues.py  projects.py  tags.py
docs/: system_architecture.md
migrations/: env.py
migrations/versions/: 0e4f6757ce33_initial_schema.py  4b4ff56edabe_initial_schema.py
tests/: conftest.py  test_api.py  test_api_issues.py  test_api_projects.py  test_api_tags.py  test_assignee_suggester.py  test_cli.py  test_cli_tags.py  test_db_schema.py  test_fk_and_timestamps.py  test_issue_validations.py  test_models.py  test_repo_issues.py  test_repo_projects.py  test_repo_tags.py  test_tags_m2m.py  test_validation.py
tests/integration/: test_api_issues.py  test_api_tags.py  test_db_schema.py  test_health_metrics.py  test_models.py  test_repo_issues.py
tests/unit/: test_cli.py  test_config_validation.py  test_schemas.py  test_tag_generator.py
web/api/: exceptions.py  issues.py  projects.py  tags.py
web/static/: api.js  styles.css  utils.js
(+5 files in other folders)
