[project]
name = "bug-tracker-cli"
version = "0.1.1"
description = "CLI for interacting with the Bug Tracker API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "requests>=2.31",
    "pydantic>=2.0",
]

[project.scripts]
cli = "cli.__main__:cli_app"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
